# xi_glium

./: Cargo.toml  LICENSE.md  README.md
glium_text/: .travis.yml  Cargo.toml  README.md
glium_text/examples/: hello_world.rs  user_text.rs
glium_text/src/: lib.rs
src/: controller.rs  core.rs  display.rs  file_dialog.rs  line.rs  main.rs  renderer.rs  text.rs
